# wave-simulation

./: Cargo.toml  index.html
assets/: simulation.wgsl  triangle_shader.wgsl
src/: application.rs  input.rs  lib.rs  main.rs  simulation.rs  timer.rs
src/renderer/: camera.rs  frame.rs  gpu_context.rs  mod.rs  pipelines.rs  shaders.rs  surface.rs
