[package]
name = "gpu-template"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
glam = { version = "0.30.9", features = ["bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive"] }

egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = { version = "0.33.3", default-features = false }

env_logger = "0.11.8"
log = "0.4.29"
pollster = "0.4.0"
web-time = "1.1.0"

wgpu = "27.0.1"
winit = "0.30.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
